se cambia el color del icon del navbar

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 .mynav a:hover {
   border-radius: 20%;
-  border-bottom: 2px solid white; }
+  border-bottom: 2px solid #4879db; }
 
 .carrito {
   color: white; }
