--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -10,7 +10,7 @@
 
 .mynav a:hover{    
     border-radius: 20%;    
-    border-bottom: 2px solid $blanco;
+    border-bottom: 2px solid $txt-ccg;
 }
 
 .carrito{
