se mejora el tamaño del txt del nav

--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -1,6 +1,5 @@
-.txt-carousel-blanco{
-    color: $blanco;
+.txt-carousel{
+    font-size: 3.5vh;
+    color: rgb(240, 235, 235);
+    font-style: oblique;
 }
-
-
-
