--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,6 @@
   .img-carousel {
     height: 350px; } }
 
-.fondoHeader {
-  color: white; }
-
 .logo {
   width: 8vw; }
 
@@ -20,11 +17,17 @@
   border-radius: 20%;
   border-bottom: 2px solid #4879db; }
 
-.carrito {
-  color: white; }
+.navbar-light .navbar-nav .nav-link {
+  color: #4879db;
+  font-weight: bold;
+  font-size: larger; }
 
-.nav-link {
-  color: #4879db; }
+.navbar-light .navbar-nav .nav-link.active {
+  color: #4879db;
+  font-weight: bold;
+  font-size: larger; }
 
-.txt-carousel-blanco {
-  color: white; }
+.txt-carousel {
+  font-size: 3.5vh;
+  color: #f0ebeb;
+  font-style: oblique; }
