--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -30,3 +30,12 @@
 
 }   
 
+.txt-color{
+    color: $blanco;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.intranet{
+    background: $txt-ccg;
+}
