--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -28,14 +29,17 @@
   font-size: larger; }
 
 .txt-color {
-  color: white;
+  color: #071d46;
   font-weight: bold;
   font-size: larger; }
 
 .intranet {
   background: #4879db; }
 
+.tamaño-em {
+  font-size: 7px; }
+
 .txt-carousel {
-  font-size: 3.5vh;
+  font-size: 2.5em;
   color: #f0ebeb;
   font-style: oblique; }
