--- a/css/style.css
+++ b/css/style.css
@@ -47,22 +47,24 @@
   margin-bottom: 40px; }
 
 .redes-sociales .icono {
-  width: 40px;
-  height: 40px;
-  color: #fff;
-  background: #cbcbcb;
+  width: 30px;
+  height: 30px;
+  color: white;
+  background: #cccccc;
   display: inline-block;
-  margin: 0px 20px;
+  margin: 2px 2px 2px 2px;
   text-decoration: none;
-  border-radius: 100px;
-  transition: all 3s ease; }
+  border-radius: 100%; }
 
 .redes-sociales .icono svg {
-  width: 20px;
-  height: 20px; }
+  width: 30px;
+  height: 30px; }
 
-.whatsapp {
+.redes-sociales .whatsapp {
   background: #0cd43e; }
+
+.color-house {
+  color: white; }
 
 .txt-carousel {
   font-size: 2.5em;
