--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -1,5 +1,13 @@
 .txt-carousel{
-    font-size: 2.5em;
+    font-size: 1.5em;
     color: rgb(240, 235, 235);
     font-style: oblique;
+    position: relative;
+    left: -50px;
+    top: 15px;
+    
+}
+
+.img-carousel{
+    height: 30vh;
 }
