--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -11,21 +11,42 @@
 .navbar-light{
     .navbar-nav{
         .nav-link{
-            color: $txt-ccg ;
+            color: $txt-ccg;
             font-weight: bold;
-            font-size: 12px;
+            
         }
         .nav-link.active{
             color: $txt-ccg;
             font-weight: bold;
-            font-size: larger;
+            font-size: 12px;
         }
 
     }
 
-}   
+}
+
+
+
+.navbar-dark{
+    .navbar-nav{
+        .nav-link{
+            color: $txt-ccg;
+            font-weight: bold;
+            font-size: 9.5px;
+        }
+
+    }
+
+}  
+
 
 .txt-color{
+    color: $blanco;
+    font-weight: bold;
+    font-size: 1.4vh;
+}
+
+.txt-cel{
     color: $blanco;
     font-weight: bold;
     font-size: 1.4vh;
@@ -34,8 +55,7 @@
 .intranet{
     background: $txt-ccg;
     height: 5vh;
-    color: rgb(84, 113, 168);
-    
+    color: rgb(84, 113, 168);   
 
 }
 
@@ -57,9 +77,7 @@
         display: inline-block;
         margin: 0px 2px 0px 2px;
         text-decoration: none;
-        border-radius: 100%;
-
-        
+        border-radius: 100%;        
     }
 }
 
@@ -88,3 +106,55 @@
     background: $txt-ccg;
 }
 
+.txt-color-menu-inf{
+    color: $txt-ccg;
+}
+
+//MEDIA QUERIES
+@media (min-width:375px){
+    .wp-nro{
+        position: relative;
+        left: -20px;
+        margin-top: 6px;
+    }
+
+    .txt-cel{        
+        font-size: 1.7vh;        
+    }
+
+    .redes-sociales {        
+        margin-top: 5px;
+    }
+
+    
+
+
+}
+
+@media (min-width:425px){
+    .txt-color{        
+        font-size: 1.45vh;
+    }
+    .logo{
+        width: 29vw;
+    }
+    
+    
+
+
+}
+@media (min-width:576px){
+    .wp-nro{
+        left: 2px;
+    }
+
+    .logo{
+        width: 21vw;
+        position: relative;
+        left: 10px;
+        top: -5px;
+    }
+
+     
+ 
+}
