--- a/css/style.css
+++ b/css/style.css
@@ -7,32 +7,25 @@
 .barra {
   position: fixe; }
 
-@media (max-width: 575px) {
-  .img-carousel {
-    height: 350px; } }
-
-.fondoHeader {
-  background: white;
-  left: 80px; }
-
 .logo {
   width: 32vw; }
 
-.navbar-light .navbar-nav .nav-link {
-  color: #5471a8;
-  font-weight: bold; }
-
-.navbar-light .navbar-nav .nav-link.active {
-  color: #5471a8;
-  font-weight: bold;
-  font-size: 12px; }
+.mynav a:hover {
+  border-radius: 20%;
+  border-bottom: 2px solid #5471a8;
+  display: inline-block; }
+  .mynav a:hover .active {
+    color: #0cd43e; }
 
 .navbar-dark .navbar-nav .nav-link {
   color: #5471a8;
-  font-weight: bold;
-  font-size: 9.5px; }
+  font-weight: 700;
+  font-size: 12px; }
 
-.txt-color {
+.navbar-dark .rr {
+  color: #0cd43e; }
+
+.txt-intranet {
   color: white;
   font-weight: bold;
   font-size: 1.4vh; }
@@ -49,6 +42,10 @@
 
 .tamaño-em {
   font-size: 7px; }
+
+.casita svg {
+  width: 30px;
+  height: 30px; }
 
 .redes-sociales {
   padding: 0px 0;
@@ -78,8 +75,31 @@
   font-size: 1rem;
   background: #5471a8; }
 
-.txt-color-menu-inf {
-  color: #5471a8; }
+.container-btn-wp {
+  background-color: #2e6329;
+  border: 1px solid #fff;
+  position: fixed;
+  z-index: 999;
+  border-radius: 50%;
+  bottom: 20px;
+  right: 25px;
+  padding: 10px;
+  transition: ease 0.3s;
+  animation: efecto 1.2s infinite; }
+
+.container-btn-wp:hover {
+  transform: scale(1.1);
+  transition: 0.3s; }
+
+.icon-wp {
+  width: 40px;
+  transition: ease 1s; }
+
+@keyframes efecto {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.85); }
+  100% {
+    box-shadow: 0 0 0 15px rgba(0, 0, 0, 0); } }
 
 @media (min-width: 375px) {
   .wp-nro {
@@ -92,7 +112,7 @@
     margin-top: 5px; } }
 
 @media (min-width: 425px) {
-  .txt-color {
+  .txt-intranet {
     font-size: 1.45vh; }
   .logo {
     width: 29vw; } }
