--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -1,6 +1,6 @@
 .txt-carousel{
     font-size: 1.5em;
-    color: rgb(240, 235, 235);
+    color: #fff;
     font-style: oblique;
     position: relative;
     left: -50px;
