--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -55,7 +55,7 @@
   position: fixed;
   z-index: 999;
   border-radius: 50%;
-  bottom: 20px;
+  bottom: 45px;
   right: 25px;
   padding: 15px;
   transition: ease 0.3s;
@@ -84,38 +84,34 @@
 
 //MEDIA QUERIES
 @media (min-width: 375px) {
-  .wp-nro {
-    position: relative;
-    left: -20px;
-    margin-top: 6px;
-  }
 
-  .txt-cel {
-    font-size: 1.7vh;
-  }
 
-  .redes-sociales {
-    margin-top: 5px;
-  }
+  
 }
 
 @media (min-width: 425px) {
-  .txt-intranet {
-    font-size: 1.45vh;
-  }
-  .logo {
-    width: 29vw;
-  }
+  
+
+
 }
 @media (min-width: 576px) {
-  .wp-nro {
-    left: 2px;
+  
+  
+}
+@media (min-width: 768px) {
+  .mynav{
+    .logo {
+      width: 14vw;
+      position: relative;
+      left: 10px;
+      top: -5px;
   }
-
-  .logo {
-    width: 21vw;
-    position: relative;
-    left: 10px;
-    top: -5px;
+  }
+  
+  .container-btn-wp {
+    
+    bottom: 40px;
+    right: 40px;
+    
   }
 }
