se mejora el tamaño de la imagen del carousel en tamaño tablet

--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -11,3 +11,27 @@
 .img-carousel{
     height: 35vh;
 }
+
+
+//MEDIA QUERIES
+@media (min-width: 375px) {
+
+
+  
+}
+
+@media (min-width: 425px) {
+  
+
+
+}
+@media (min-width: 576px) {
+  
+  
+}
+@media (min-width: 768px) {
+    .img-carousel{
+        height: 50vh;
+    }
+  
+}
