--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -1,10 +1,36 @@
 .txt-carousel{
-    font-size: 1.5em;
+    font-size: 1.6em;
     color: #fff;
     font-style: oblique;
     position: relative;
-    left: -50px;
+    left: -46px;
     top: 15px;
+    background: rgb(5, 175, 104);
+    border-radius: 10px;
+    
+}
+
+.txt-carousel-3{
+    font-size: 1.6em;
+    color: #fff;
+    font-style: oblique;
+    position: relative;
+    left: -46px;
+    top: 15px;
+    background: rgb(231, 165, 12);
+    border-radius: 10px;
+    
+}
+
+.txt-carousel-4{
+    font-size: 1.6em;
+    color: rgb(22, 22, 98);
+    font-style: oblique;
+    position: relative;
+    left: -46px;
+    top: 15px;
+    background: #fff;
+    border-radius: 10px;
     
 }
 
