--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@
   left: -46px;
   top: 15px;
   background: #05af68;
-  border-radius: 10px; }
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px #5471a8; }
 
 .txt-carousel-3 {
   font-size: 1.6em;
@@ -82,7 +83,8 @@
   left: -46px;
   top: 15px;
   background: #e7a50c;
-  border-radius: 10px; }
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px #5471a8; }
 
 .txt-carousel-4 {
   font-size: 1.6em;
@@ -92,7 +94,8 @@
   left: -46px;
   top: 15px;
   background: #fff;
-  border-radius: 10px; }
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px #5471a8; }
 
 .img-carousel {
   height: 35vh; }
