--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -7,6 +7,7 @@
     top: 15px;
     background: rgb(5, 175, 104);
     border-radius: 10px;
+    box-shadow: 3px 3px 3px $txt-ccg;
     
 }
 
@@ -19,6 +20,7 @@
     top: 15px;
     background: rgb(231, 165, 12);
     border-radius: 10px;
+    box-shadow: 3px 3px 3px $txt-ccg;
     
 }
 
@@ -31,6 +33,7 @@
     top: 15px;
     background: #fff;
     border-radius: 10px;
+    box-shadow: 3px 3px 3px $txt-ccg;
     
 }
 
