--- a/scss/variables/_colores.scss
+++ b/scss/variables/_colores.scss
@@ -1,4 +1,6 @@
 $naranja: rgb(255, 179, 0);
 $blanco: white;
 $txt-ccg: rgb(84, 113, 168);
-$celeste: rgb(11, 164, 224)
+$celeste: rgb(11, 164, 224);
+$color:red;
+$fondo:blue;
