--- a/scss/secciones/_carousel.scss
+++ b/scss/secciones/_carousel.scss
@@ -83,3 +83,51 @@
     }
   
 }
+
+@media (min-width: 1024px) {
+    .img-carousel{
+        height: 60vh;
+    }
+
+    .txt-carousel-1{
+        font-size: 3em;
+        width: 60vw;
+    }
+    .txt-carousel-2{
+        font-size: 3em;
+        width: 60vw;
+    }
+    .txt-carousel-3{
+        font-size: 3em;
+        width: 60vw;
+    }
+    .txt-carousel-4{
+        font-size: 3em;
+        width: 60vw;
+    }
+  
+}
+
+@media (min-width: 1440px) {
+    .img-carousel{
+        height: 70vh;
+    }
+
+    .txt-carousel-1{
+        font-size: 4em;
+        width: 60vw;
+    }
+    .txt-carousel-2{
+        font-size: 4em;
+        width: 60vw;
+    }
+    .txt-carousel-3{
+        font-size: 4em;
+        width: 60vw;
+    }
+    .txt-carousel-4{
+        font-size: 4em;
+        width: 60vw;
+    }
+  
+}
